FIXED: h2 tag for Projects not Centered

--- a/public/style.css
+++ b/public/style.css
@@ -950,6 +950,10 @@ video {
   align-self: flex-start;
 }
 
+.self-center{
+  align-self: center;
+}
+
 .justify-self-center{
   justify-self: center;
 }
